using PlusPim.Runtime.Services;

namespace PlusPim.Runtime.Memory;

internal class Memory: IMemory {
    public void LoadProgram(byte[] program) {
        throw new NotImplementedException();
    }

    public void Reset() {
        throw new NotImplementedException();
    }
}
