namespace PlusPim.Runtime.MipsArchitecture;

internal interface IMipsInstruction {
}
