namespace PlusPim.Runtime.MipsArchitecture.MipsInstructions;

internal class MipsAddi: IMipsInstruction {
}
