using System;
using System.Collections.Generic;
using System.Text;

namespace PlusPim.Runtime.MipsArchitecture;

internal class MipsRegisterFile {
}
