using PlusPim.Runtime.Services;

namespace PlusPim.Runtime.Processor;

internal class MipsProcessor: IProcessor {
    public void Execute() {
        throw new NotImplementedException();
    }

    public void Reset() {
        throw new NotImplementedException();
    }
}

