namespace PlusPim.Runtime.Services;

internal interface IProcessor {
    void Execute();
    void Reset();
}
