@startuml Runtime Layer Detail

!define INTERFACE_COLOR #C8E6C9
!define ABSTRACT_COLOR #FFE0B2

skinparam linetype ortho

' ============================================
' レイヤー間インターフェース
' ============================================
package "PlusPim Interface" {
    interface IRuntimeService INTERFACE_COLOR {
        + LoadProgram(program: string): Result??
        + Reset(): void
        + ExecuteSteps(stepNum: uint): Result??

    }
}
' ============================================
' ランタイムレイヤ
' ============================================

package "Runtime" {

    class RuntimeService {
        - _processor: IProcessor
        - _memory: IMemory
        --
        + LoadProgram(program: string): Result??
        + Reset(): void
        + ExecuteSteps(stepNum: int): Result??
    }

    interface IProcessor INTERFACE_COLOR {
        + Execute(): ExecutionResult
        + Reset(): void
    }

    interface IAssembler INTERFACE_COLOR {
        + Assemble(program: string): Program
    }

    interface IMemory INTERFACE_COLOR {
        + LoadProgram(program: Program): void
        + Reset(): void
        + Load(addr: uint, len: uint)
        + Store(addr: uint, len: uint)
    }   

    IRuntimeService <|.. RuntimeService

    RuntimeService --> IProcessor
    RuntimeService --> IMemory
    RuntimeService --> IAssembler
}


' --------------------------------------------
' プログラム
' --------------------------------------------
package "Util" {
    ' 十分抽象なのでI/Fしない
    class Program {
        - _program: Dictionary<MemorySegment, byte[]>
        - _entryPoint: uint
        --
        + GetProgram(): Dictionary<MemorySegment, byte[]>
        + GetEntryPoint(): uint
    }

    Program ..> MemorySegment
}
' ============================================
' Mips特有の実装
' ============================================

package "Mips Impl" {

    ' --------------------------------------------
    ' 命令
    ' --------------------------------------------
    interface IMipsInstruction INTERFACE_COLOR {
        + Execute(registers: MipsRegisterFile, memory: IMemory): Result??
    }

    class MipsAdd {
        + Execute(registers: MipsRegisterFile, memory: IMemory): Result??
    }

    IMipsInstruction <|.. MipsAdd

    class MipsAddi {
        + Execute(registers: MipsRegisterFile, memory: IMemory): Result??
    }

    IMipsInstruction <|.. MipsAddi

    ' --------------------------------------------
    ' アセンブラ
    ' --------------------------------------------


    class MipsAssembler {
        --
        + Assemble(program: string): Program?
    }

    IAssembler <|.. MipsAssembler
    MipsAssembler ..> Program
    MipsAssembler ..> MipsInstructions
    
    ' --------------------------------------------
    ' プロセッサとレジスタ
    ' --------------------------------------------


    class MipsProcessor {
        - _registers: MipsRegisterFile
        - _memory: IMemory
        --
        + Execute(): ExecutionResult
        + Reset(): void
        - _InstructionFetch(pc: uint): byte[]
        - _InstructionDecode(op: byte[]): IMipsInstruction
        - _Execute(instruction: IMipsInstruction): Result??

    }

    IProcessor <|.. MipsProcessor

    MipsProcessor --> IMemory
    MipsProcessor --> MipsRegisterFile
    MipsProcessor ..> IMipsInstruction
    MipsProcessor ..> MipsInstructions

    class MipsRegisterFile {
        - pc: uint
        - hi: uint
        - lo: uint
        - v0: uint
        - etc
        --
        + GetByRegisterId(name: RegistorId)
        + GetAllRegisterId()
        + GetAllRegisterName()
    }


    MipsRegisterFile ..> MipsRegisterId

    enum MipsRegisterId {
        + v0
        + etc
    }

    enum MipsInstructions {
        + add
        + etc
    }

}

' --------------------------------------------
' メモリ
' --------------------------------------------

package "Memory" {
    class Memory {
        - Dictionary<MemorySegment, byte[]>
        --
        + LoadProgram(program: Program): void
        + Reset(): void
        + Load(addr: uint, len: uint): byte[]
        + Store(addr: uint, data: byte[])
    }

    IMemory <|.. Memory

    Memory ..> MemorySegment
    Memory ..> Program

    enum MemorySegment {
        + text
        + data
    }
}


@enduml
